--- a/Joomla_3.5.x/virtuemart/interkassa_virtuemart/language/ru-RU/ru-RU.plg_vmpayment_interkassa.ini
+++ b/Joomla_3.5.x/virtuemart/interkassa_virtuemart/language/ru-RU/ru-RU.plg_vmpayment_interkassa.ini
@@ -1,13 +1,13 @@
-INTERKASSA_MERCHANT_ID="Идентификатор магазина"
-INTERKASSA_MERCHANT_ID_DESC="Идентификатор магазина(Merchant ID)"
+INTERKASSA_MERCHANT_ID="Идентификатор кассы"
+INTERKASSA_MERCHANT_ID_DESC="Идентификатор кассы"
 INTERKASSA_TEST_MODE="Тестовый режим"
-INTERKASSA_TEST_KEY="Тестовый ключ"
-INTERKASSA_TEST_KEY_DESC="Тестовый ключ"
+INTERKASSA_TEST_KEY="Тестовый ключ кассы"
+INTERKASSA_TEST_KEY_DESC="Тестовый ключ указан в настройках кассы во вкладке Безопасность"
 INTERKASSA_TEST_MODE_DESC="в тестовом режиме работы платежной системы, деньги клиента за покупки не взимаютса"
 INTERKASSA_TEST_MODE_OFF="выключить"
 INTERKASSA_TEST_MODE_ON="включить"
-INTERKASSA_SECRET_KEY="Секретный ключ"
-INTERKASSA_SECRET_KEY_DESC="Секретный ключ должен совпадать с ключём который введен в кабинете Интеркассы"
+INTERKASSA_SECRET_KEY="Секретный ключ кассы"
+INTERKASSA_SECRET_KEY_DESC="Секретный ключ указан в настройках кассы во вкладке Безопасность"
 INTERKASSA_HASH_TYPE="Метод формирования контрольной подписи:"
 INTERKASSA_HASH_TYPE_DESC="Метод формирования контрольной подписи"
 
@@ -15,10 +15,10 @@ INTERKASSA_API_STATUS="API Интеркассы"
 INTERKASSA_API_STATUS_DESC="Дает возможность выбора плетежной системы перед переходом на Интеркассу"
 
 INTERKASSA_API_ID="Интеркасса API Id"
-INTERKASSA_API_ID_DESC="Находится в настройках аккаунта вашей кассы в разделе API"
+INTERKASSA_API_ID_DESC="Находится в настройках аккаунта в разделе API"
 
 INTERKASSA_API_KEY="Интеркасса API Key"
-INTERKASSA_API_KEY_DESC="Находится в настройках аккаунта вашей кассы в разделе API"
+INTERKASSA_API_KEY_DESC="Находится в настройках аккаунта в разделе API"
 
 INTERKASSA_API_ON="Включить"
 INTERKASSA_API_OFF="Отключить"
@@ -33,3 +33,12 @@ INTERKASSA_PAYMENT_CONFIRMED="Заказ %s оплачен"
 
 INTERKASSA_BUTTON_PAY="Оплатить"
 INTERKASSA_SELECT="Выберите метод оплаты - и нажмите на кнопку ОПЛАТИТЬ"
+
+VMPAYMENT_INTERKASSA_SELECT_PAYMENT="Выбрать платежную систему"
+VMPAYMENT_INTERKASSA_TXT_PAYMENT_FOR_ORDER="Оплата заказа"
+VMPAYMENT_INTERKASSA_PTS_1="Выберите удобный способ оплаты"
+VMPAYMENT_INTERKASSA_PTS_2="Укажите валюту"
+VMPAYMENT_INTERKASSA_PTS_3="Нажмите 'Оплатить'"
+VMPAYMENT_INTERKASSA_PAY_WITH="Оплатить с"
+VMPAYMENT_INTERKASSA_ERR_NOT_SLCT_CURR="Вы не выбрали валюту"
+VMPAYMENT_INTERKASSA_ERR_VOR="Ты мошенник! Пшел вон отсюда!"
